refactor:(data-generation): parameterizing the number of created records

--- a/HardChallenge/SmartVault.DataGeneration/appsettings.json
+++ b/HardChallenge/SmartVault.DataGeneration/appsettings.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "data source={0}"
   },
+  "DataGeneration": {
+    "NumberOfUsers": 1,
+    "NumberOfDocumentsPerUser": 3
+  },
   "DatabaseFileName": "testdb.sqlite"
 }
