--- a/HardChallenge/FileUtils/FileUtils.csproj
+++ b/HardChallenge/FileUtils/FileUtils.csproj
@@ -1,13 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapper.Extensions.SQLite" Version="4.2.1" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Dapper.Extensions.SQLite" Version="4.2.1" />
+	</ItemGroup>
+	
 </Project>
